// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render SelectInput correctly without any given errors 1`] = `
<FormField
  error={false}
  width="11"
>
  <Select
    onChange={[Function]}
    options={
      Array [
        Object {
          "key": "fakeCategoryOption1",
          "text": "Fake Category Option 1",
          "value": "fakeCategoryOption1",
        },
        Object {
          "key": "fakeCategoryOption2",
          "text": "Fake Category Option 2",
          "value": "fakeCategoryOption2",
        },
        Object {
          "key": "fakeCategoryOption3",
          "text": "Fake Category Option 3",
          "value": "fakeCategoryOption3",
        },
      ]
    }
    placeholder="test select input placeholder"
    value="TestSelectInputValue"
  />
</FormField>
`;

exports[`Should set Form.Field error to true and render Label with given error message 1`] = `
<FormField
  error={true}
  width="11"
>
  <Select
    onChange={[Function]}
    options={
      Array [
        Object {
          "key": "fakeCategoryOption1",
          "text": "Fake Category Option 1",
          "value": "fakeCategoryOption1",
        },
        Object {
          "key": "fakeCategoryOption2",
          "text": "Fake Category Option 2",
          "value": "fakeCategoryOption2",
        },
        Object {
          "key": "fakeCategoryOption3",
          "text": "Fake Category Option 3",
          "value": "fakeCategoryOption3",
        },
      ]
    }
    placeholder="test select input placeholder"
    value="TestSelectInputValue"
  />
  <Label
    basic={true}
    color="red"
  >
    test select input error message
  </Label>
</FormField>
`;
